added discord id support
